src/index.css
/* ... */
button.search-filters, button.search-filters:focus {
  border: 1px solid #ccc;
  transition: ease-in-out;
  box-shadow: none !important;
  background-color: #fff;
}

button.search-filters:hover,
button.search-filters:focus,
button.search-filters:active,
button.search-filters:visited,
button.search-filters:focus-within,
button.search-filters:active:focus,
.show>.btn-outline-secondary.dropdown-toggle {
  background-color: #9EA6C2 !important;
  border: 1px solid #ccc;
}

div.sidebar {
  background-color: #282E3F;
  height: inherit;
  overflow: auto;
  cursor: pointer;
}

div.sidebar-container {
  position: sticky;
  top: 0;
}

div.sidebar-notebooks-dropdown-md, 
div.sidebar-item-text-container-md,
div.sidebar-item-md,
div.preview-note-section {
  display: none;
}

li.sidebar-collapsed-item-text {
  color: #9EA6C2;
  padding-left: 5%;
  word-wrap: break-word;
}

div.sidebar-item-text-container:hover,
li.sidebar-collapsed-item-text:hover {
  background-color: #1E2230;
  color: #fff !important;
}

div.sidebar-extension-sm {
  position: sticky;
  height: 100vh;
  display: block;
  top: 0;
  overflow: auto;
}

div.sidebar-extension-sm,
div.tag-links-sm {
  background-color: #282E3F;
  padding-left: 0px;
  padding-right: 0px;
  display: none;
}

div.sidebar-container {
  padding-right: 0px;
}

div.sidebar-item-icon {
  font-size: 1.5rem;
}

span.sidebar-item-icon-sm {
  font-size: 2rem;
}

div.sidebar-item-text-container-sm {
  text-align: center;
}

div.sidebar-item-text-container-sm > a {
  color: #9EA6C2;
}

div.sidebar-item-text-container-sm > a:hover {
  color: #fff;
}

div.sidebar-item-text-container-sm:hover {
  background-color: transparent;
}

div.col-1-sidebar-container-sm {
  flex: 0 0 8.333333%;
  max-width: 8.333333%;
}

div.sidebar-item-sm {
  display: block;
  padding-bottom: 30px;
}

form.search-sm {
  margin-bottom: 0px !important;
}

div.navbar-sm-container {
  position: sticky;
  top: 0px;
  padding-left: 0px !important;
  padding-right: 0px !important;
  /* background-color: #fff; */
  z-index: 1000;
}

div.note-card:not(:last-child) {
  margin-bottom: 30px;
}

div.sidebar,
div.notes-list {
  padding-top: 10px;
}

div.search-notes-md {
  display: none;
  margin-bottom: 20px;
  margin-top: 5px;
}

li.search-home {
  display: none;
}

li.search-home-hamburger {
  display: initial;
}

div.notebooks-search-filter-list {
  height: auto;
  max-height: 250px;
  overflow-x: hidden;
}

@media (max-width: 700px) {
  div.sidebar-container,
  .sidebar-extension-sm {
      display: none !important;
  }
}

@media (min-width: 701px) {
  li.search-home {
    display: initial;
  }

  div.navbar-sm-container {
      display: none;
  }

  div.search-notes-md {
      display: flex;
  }

  div.preview-note-section {
      display: block;
  }
}

@media (max-width: 1064px) {
  div#collapseTagsBigSidebar, 
  div#collapseNotebooksBigSidebar,
  div.sidebar-item-lg {
    display: none !important;
  }
}

@media (min-width: 1065px) {

  div.sidebar-extension-sm {
    display: none !important;
  }

  div.sidebar-container {
      padding-right: 15px;
  }

  a.sidebar-item-text {
      word-wrap: break-word;
      color: #9EA6C2 !important;
      text-decoration: none !important;
      display: block;
  }

  span.sidebar-item-icon {
      float: right;
  }
  
  div.sidebar-item-text-container {
      min-height: 40px;
      padding-left: 5%;
      padding-right: 5%;
  }
  
  div.sidebar-item-text-container > a {
      line-height: 40px;
  }
  
  span.sidebar-item-icon {
      line-height: 40px;
  }

  div.sidebar-item-text-container:hover > a {
      color: #fff !important;
  }
  
  div.sidebar-item:not(:last-child) {
      padding-bottom: 5px;
  }

  a.sidebar-item-text[aria-expanded=true] {
      color: #fff !important;
  }
  
  a.sidebar-item-text[aria-expanded=true] .oi-chevron-left {
      display: none !important;
  }
  
  a.sidebar-item-text[aria-expanded=false] .oi-chevron-left {
      display: inline !important;
  }
  
  a.sidebar-item-text[aria-expanded=true] .oi-chevron-bottom {
      display: inline !important;
  }
  
  a.sidebar-item-text[aria-expanded=false] .oi-chevron-bottom {
      display: none !important;
  }

  div.sidebar-links-sm,
  div.sidebar-item-text-container-sm,
  div.sidebar-item-sm {
      display: none;
  }

  div.sidebar-item-text-container-md,
  div.sidebar-item-md {
      display: block;
  }

  div.col-2.sidebar-container
  {
      flex: 0 0 16.666667%;
      max-width: 16.666667%;
  }

}

a.sidebar-item-link {
  text-decoration: none !important;
  color: inherit !important;
}

li.tag-selected, p.currently-opened-note-sidebar-md {
  color: #fff;
  background-color: #1E2230;
}

.dropdown-menu.tags-dropdown-hamburger-container.show > li {
  color: black !important;
  cursor: pointer;
}

.dropdown-menu.tags-dropdown-hamburger-container.show > li:hover {
  background-color: initial !important;
}

.hamburger-menu-tag-element {
  cursor: pointer;
  margin-bottom: 0px;
}

.hamburger-menu-tag-element > span {
  top: 4px;
}

.dropdown-item:active {
  background-color: #6574a0 !important;
}

p.hamburger-menu-tag-element.dropdown-item:active {
  background-color: transparent !important;
  color: #212529 !important;
}

input.new-notebook-hamburger {
  background-color: inherit;
  border: none;
}

input.new-notebook-hamburger:focus {
  border: 1px solid #ccc !important;
  box-shadow: none !important;
  transition: none !important;
  background-color: transparent;
  color: initial;
}

a.hamburger-menu-link {
  text-decoration: none !important;
}

button.navbar-toggler {
  border: 0px !important;
}

button.navbar-toggler:active,
button.navbar-toggler:focus {
  outline: 0 !important;
}

.show>.btn-outline-secondary.dropdown-toggle {
  background-color: transparent !important;
  border-color: #ccc !important;
  color: #868e96 !important;
}

button.search-filters:hover {
  background-color: transparent !important;
  border: 1px solid #ccc;
  color: #868e96 !important;
}
/* ... */

